--- a/apps/evaluaciones/templates/consulta_evaluaciones.html
+++ b/apps/evaluaciones/templates/consulta_evaluaciones.html
@@ -6,6 +6,11 @@
     Listado de evaluaciones
 {% endblock %}
 
+{% block css %}
+    {{ block.super }}
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs4/dt-1.10.18/r-2.2.2/datatables.min.css"/>
+{% endblock %}
+
 {% block titulo_pagina %}
     Listado de evaluaciones
 {% endblock %}
@@ -28,7 +33,7 @@
         <!-- /.box-header -->
         <!-- form start -->
         <div class="box-body">
-            <table class="table">
+            <table class="table table-striped table-bordered" id="tabla-evaluaciones">
                 <thead>
                 <tr>
                     <th>Fecha</th>
@@ -115,6 +120,15 @@
 
 
 {% block js %}
+
+    <script type="text/javascript" src="https://cdn.datatables.net/v/bs4/dt-1.10.18/r-2.2.2/datatables.min.js"></script>
+
+    <script type="text/javascript">
+        $(document).ready( function () {
+            $('#tabla-evaluaciones').DataTable();
+        } );
+    </script>
+
     <script type="text/javascript">
 
     var deactivate_url = "";
