--- a/apps/employees_and_jobs/templates/consulta_cargos.html
+++ b/apps/employees_and_jobs/templates/consulta_cargos.html
@@ -6,6 +6,11 @@
     Listado de cargos
 {% endblock %}
 
+{% block css %}
+    {{ block.super }}
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs4/dt-1.10.18/r-2.2.2/datatables.min.css"/>
+{% endblock %}
+
 {% block titulo_pagina %}
     Listado de cargos
 {% endblock %}
@@ -28,7 +33,7 @@
         <!-- /.box-header -->
         <!-- form start -->
         <div class="box-body">
-            <table class="table">
+            <table class="table table-striped table-bordered" id="tabla-cargos">
                 <thead>
                 <tr>
                     <th>Nombre del cargo</th>
@@ -119,6 +124,15 @@
 
 
 {% block js %}
+
+    <script type="text/javascript" src="https://cdn.datatables.net/v/bs4/dt-1.10.18/r-2.2.2/datatables.min.js"></script>
+
+    <script type="text/javascript">
+        $(document).ready( function () {
+            $('#tabla-cargos').DataTable();
+        } );
+    </script>
+
     <script type="text/javascript">
 
     var deactivate_url = "";
