--- a/apps/usuarios/templates/usuarios/editar_usuario.html
+++ b/apps/usuarios/templates/usuarios/editar_usuario.html
@@ -49,6 +49,30 @@
 		</div>
 	</div>
 
+    <div class="row">
+        <div class="col-sm-4">
+            {% bootstrap_field form.eps %}
+        </div>
+        <div class="col-sm-4">
+            {% bootstrap_field form.pension_fund %}
+        </div>
+        <div class="col-sm-4">
+            {% bootstrap_field form.severance_fund %}
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-sm-4">
+            {% bootstrap_field form.bank %}
+        </div>
+        <div class="col-sm-4">
+            {% bootstrap_field form.account_number %}
+        </div>
+        <div class="col-sm-4">
+            {% bootstrap_field form.salary %}
+        </div>
+    </div>
+
 	<div class="row">
 		<div class="col-sm-4">
 			{% bootstrap_field form.fecha_nacimiento %}
