--- a/templates/menus/menu_recursosHumanos.html
+++ b/templates/menus/menu_recursosHumanos.html
@@ -1,3 +1,4 @@
+<li class="header">NOMINA</li>
 {% if perms.nomina %}
     <li class="treeview">
         <a href="#">
@@ -12,7 +13,7 @@
         </ul>
     </li>
 {% endif %}
-
+<li class="header">EVALUACIONES</li>
 {% if perms.evaluaciones %}
     <li class="treeview">
         <a href="#">
