--- a/templates/menu.html
+++ b/templates/menu.html
@@ -14,6 +14,7 @@
 
     <ul class="sidebar-menu" data-widget="tree">
       {% include 'menus/menu_usuarios.html' %}
+      {% include 'menus/menu_ordenes-servicio.html' %}
     </ul>
 
   </section>
