--- a/apps/compras/templates/compras/listar_cotizaciones.html
+++ b/apps/compras/templates/compras/listar_cotizaciones.html
@@ -42,7 +42,7 @@ Solicitud de Compra #{{solicitud.id}}
 
                 <div class="col-xs-3">
                   <label for="inputNombre">Cargo</label>
-                  <input type="text" class="form-control" id="inputNombre" disabled value="{{usuario.rol}}">
+                  <input type="text" class="form-control" id="inputNombre" disabled value="{{usuario.cargo.name}}">
                 </div>
               </div>
 
