--- a/apps/compras/templates/compras/solicitud.html
+++ b/apps/compras/templates/compras/solicitud.html
@@ -6,15 +6,8 @@
               <a data-toggle="collapse" data-parent="#acordion" href="#collapse{{solicitud.id}}">
                 Solucitud #{{solicitud.id}}
               </a>
-              {% if solicitud.estado_aprobacion == 'pendiente' %}
-              <i onmouseout="quitM(event)" onmouseover="mensaje(event)"class="fa fa-circle text-grey"></i> <!-- cambia color con el estado_aprobacion -->
-              {% elif solicitud.estado_aprobacion == 'rechazada' %}
-              <i onmouseout="quitM(event)" onmouseover="mensaje(event)"class="fa fa-circle text-red"></i> <!-- cambia color con el estado -->
-              {% elif solicitud.estado_aprobacion == 'aprobado_jefe' %}
-              <i onmouseout="quitM(event)" onmouseover="mensaje(event)"class="fa fa-circle text-orange"></i> <!-- cambia color con el estado -->
-              {% else %}
-              <i onmouseout="quitM(event)" onmouseover="mensaje(event)"class="fa fa-circle text-green"></i> <!-- cambia color con el estado -->
-              {% endif %}
+              {% include 'compras/estados_solicitud.html' %}
+
               {% if solicitud.estado_aprobacion == 'pendiente' %}
               <a style="display: inline" href="{% url 'compras:solicitud_edit' solicitud.id %}" class="btn btn-primary">Modificar Solicitud</a>
               <a style="display: inline" href="{% url 'compras:solicitud_delete' solicitud.id %}" class="btn btn-danger">Eliminar Solicitud</a>
