--- a/apps/datosmaestros/templates/datosmaestros/categoria_listar.html
+++ b/apps/datosmaestros/templates/datosmaestros/categoria_listar.html
@@ -27,7 +27,9 @@ Gestiona las categorias de Datos Maestros
   <div class="box box-primary">
     <div class="box-header">
       <h3 class="box-title">Listado de categorias</h3>
-      <a type="button" class="btn btn-success" href="{% url 'datosmaestros:crear_categoria' %}"><i class="fa fa-plus-circle"></i> Crear categoria<div class="ripple-container"></div></a>
+      {% if user.is_superuser %}
+        <a type="button" class="btn btn-success" href="{% url 'datosmaestros:crear_categoria' %}"><i class="fa fa-plus-circle"></i> Crear categoria<div class="ripple-container"></div></a>
+      {% endif %}
     </div>
     <div class="box-body">
       <table id="tabla_categorias" class="table table-striped table-bordered">
@@ -62,23 +64,25 @@ Gestiona las categorias de Datos Maestros
                   <li>
                     <a href="{% url 'datosmaestros:listar_datos' categoria.id %}">Datos</a>
                   </li>
-                  <li>
-                    <a href="{% url 'datosmaestros:editar_categoria' categoria.id %}">Editar</a>
-                  </li>
-                  <li>
-                    <a href="#modal-detalle" data-toggle="modal"
-                    data-nombre="{{ categoria.nombre }}"
-                    data-descripcion="{{ categoria.descripcion }}"
-                    data-estado="{% if categoria.estado %} Activa {% else %} Inactiva {% endif %}">
-                    Detalle</a>
-                  </li>
-                  <li>
-                    <a href="#modal-eliminar" data-toggle="modal"
-                    data-id="{{ categoria.id }}"
-                    data-nombre="{{ categoria.nombre }}"
-                    data-estado="{% if categoria.estado %} Desactivar {% else %} Activar {% endif %}">
-                    {% if categoria.estado %} Desactivar {% else %} Activar {% endif %}</a>
-                  </li>
+                  {% if user.is_superuser %}
+                    <li>
+                      <a href="{% url 'datosmaestros:editar_categoria' categoria.id %}">Editar</a>
+                    </li>
+                    <li>
+                      <a href="#modal-detalle" data-toggle="modal"
+                      data-nombre="{{ categoria.nombre }}"
+                      data-descripcion="{{ categoria.descripcion }}"
+                      data-estado="{% if categoria.estado %} Activa {% else %} Inactiva {% endif %}">
+                      Detalle</a>
+                    </li>
+                    <li>
+                      <a href="#modal-eliminar" data-toggle="modal"
+                      data-id="{{ categoria.id }}"
+                      data-nombre="{{ categoria.nombre }}"
+                      data-estado="{% if categoria.estado %} Desactivar {% else %} Activar {% endif %}">
+                      {% if categoria.estado %} Desactivar {% else %} Activar {% endif %}</a>
+                    </li>
+                  {% endif %}
                 </ul>
               </div>
             </td>
