--- a/apps/ordenes_servicio/templates/ordenes_servicio/base.html
+++ b/apps/ordenes_servicio/templates/ordenes_servicio/base.html
@@ -36,7 +36,7 @@
     <header class="main-header">
 
         <!-- Logo -->
-        <a href="index2.html" class="logo">
+        <a href="/" class="logo">
             <!-- mini logo for sidebar mini 50x50 pixels -->
             <span class="logo-mini">E<b>R</b>P</span>
             <!-- logo for regular state and mobile devices -->
@@ -108,8 +108,6 @@
         <strong>Copyright &copy; 2018 <a href="#">ERPAdmin</a>.</strong> Todos los derechos reservados.
     </footer>
 
-    <!-- Control Sidebar -->
-    {% include 'control_panel.html' %}
     <!-- /.control-sidebar -->
     <!-- Add the sidebar's background. This div must be placed
     immediately after the control sidebar -->
