--- a/templates/base.html
+++ b/templates/base.html
@@ -60,7 +60,7 @@
         </nav>
     </header>
 
-    {% include 'menu_cuentas.html' %}
+    {% include 'menu.html' %}
 
     <!-- Content Wrapper. Contains page content -->
     <div class="content-wrapper">
